Updated src for imag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <hr>
         <table cellspacing="20">
             <tr>
-                <td> <img src="C:\Users\ys\Desktop\cv\profile DP.jpeg" alt="kowshik's DP"></td>
+                <td> <img src="profile DP.jpeg" alt="kowshik's DP"></td>
             
             
                 <td><h1>SAMUDRALA SAI KOWSHIK</h1>
