--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         </table>
         <hr>
         <h3>HOBBIES</h3>
-        <a href="C:\Users\ys\Desktop\cv\hobbies.html"><b>click here</b></a>
+        <a href="hobbies.html"><b>click here</b></a>
         <hr>
         <h3>CONTACT ME</h3>
-        <a href="C:\Users\ys\Desktop\cv\contact.html"><b>CONTACT</b></a>
+        <a href="contact.html"><b>CONTACT</b></a>
 
         
 
