--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>PHOTHOGRAPHY</td>
+                <td>PHOTOGRAPHY</td>
                 <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
