--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <body>
         <h1>CONTACT ME</h1>
         <p><b>SAMUDRALA SAI KOWSHIK</b></p><br>
-        <a href="tell:+918885942590">8885942590</a><br>
+        <a href="tell:8885942590">8885942590</a><br>
         <!iframe src="https://maps.app.goo.gl/J27ysoCB5vwVKSR98" height="400" width="300" ></iframe> <br>
         <hr>      
         <form action="mailto:kowshik.samudrala10gate@gmail.com" method="post" enctype="text/plain">
